--- a/design-portfolio2026/my-app/src/app/globals.css
+++ b/design-portfolio2026/my-app/src/app/globals.css
@@ -17,6 +17,11 @@ body {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 80px 0px;
+  gap: 0px;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
