--- a/design-portfolio2026/my-app/components/intro.module.css
+++ b/design-portfolio2026/my-app/components/intro.module.css
@@ -4,10 +4,11 @@
     width: 100%;
     max-width: 800px;
     padding: 20px;
-    border-top: 2px solid #EAEAEA;
-    border-right: 2px solid #EAEAEA;
-    border-left: 2px solid #EAEAEA;
+    border-top: 1px solid var(--border);
+    border-right: 1px solid var(--border);
+    border-left: 1px solid var(--border);
     gap: 20px;
+    font-weight: 450;
 }
 
 .linkcontainer {
@@ -19,4 +20,7 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
+    font-size: 1rem;
+    color: var(--secondarytext);
+    font-weight: 450;
 }
