--- a/design-portfolio2026/my-app/components/projectssection.module.css
+++ b/design-portfolio2026/my-app/components/projectssection.module.css
@@ -23,14 +23,14 @@
   display: flex;
   flex-direction: column;
   padding: 16px;
-  outline: 1px solid #eaeaea;
+  outline: 1px solid var(--border);
   outline-offset:  -1px;
   border-radius: 0px;
   gap: 16px;
 }
 
 .item:hover {
-  outline: 1px solid #C9C9C9;
+  outline: 1px solid var(--borderhover);
   outline-offset: -1px;
 }
 
@@ -61,18 +61,18 @@
 
 
 .projectName {
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 14px;
+  font-weight: 450;
 }
 
 .badge {
   font-size: 12px;
   padding: 2px 8px;
-  border: 1px solid #eaeaea;
+  border: 1px solid var(--border);
 }
 
 .stack {
   margin-top: 4px;
-  font-size: 13px;
-  color: #666666;
+  font-size: 11px;
+  color:  var(--secondarytext);
 }
