--- a/design-portfolio2026/my-app/src/app/globals.css
+++ b/design-portfolio2026/my-app/src/app/globals.css
@@ -1,12 +1,18 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --border: #EAEAEA;
+  --borderhover: #C9C9C9;
+  --secondarytext: #666666;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #000000;
     --foreground: #ededed;
+    --border: #2E2E2E;
+    --borderhover: #454545;
+    --secondarytext: #A0A0A0;
   }
 }
 
@@ -14,6 +20,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: var(--font-geist);
 }
 
 body {
@@ -24,9 +31,14 @@ body {
   gap: 0px;
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media (max-width: 640px) {
+  body {
+    padding: 0px;
+  }
 }
 
 * {
