--- a/design-portfolio2026/my-app/src/app/globals.css
+++ b/design-portfolio2026/my-app/src/app/globals.css
@@ -2,7 +2,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --border: #EAEAEA;
-  --borderhover: #C9C9C9;
+  --borderhover: #A8A8A8;
   --secondarytext: #666666;
 }
 
